--- a/inte/stylesheets/style.css
+++ b/inte/stylesheets/style.css
@@ -95,6 +95,7 @@ h1, h3 {
 	display: inline-block;
 	font-size: 0.8em;
 	padding: 0.1em 0.3em 0.2em;
+	margin-left: 0.1em;
 	background: #EB581A;
 	border-radius: 3px;
 	color: rgba(255, 255, 255, 0.9);
