--- a/assets/layout/index.jade
+++ b/assets/layout/index.jade
@@ -22,6 +22,6 @@ html(lang='en')
               - for (i = 0; i < project.technos.length; ++i) {
                 li= project.technos[i]
               - }
-            div!= project.content
+            div.content!= project.content
 // /body
 script(src='assets/scripts/script.js')
