change template tree

--- a/assets/layout/index.jade
+++ b/assets/layout/index.jade
@@ -13,14 +13,14 @@ html(lang='en')
         h2 Our projects
         - each repo in repos
           article
-            h3= repo.name
-            .picture
-              img(src='nawak', alt='')
+            .preview
+              h3= repo.name
+              .picture
+                img(src='nawak', alt='')
+              a.download-link(href='#{repo.html_url}') Repository
             ul.technologies
               - each percentage, language in repo.languages
                 li(class='#{language}', style='width: #{percentage}%')
-            a.download-link(href='#{repo.html_url}') Repository
             div.content= repo.description
 // /body
 script(src='assets/scripts/script.js')
-  
