--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -34,7 +34,7 @@ h3 {
   margin: 0;
   background: rgba(255,255,255,0.8);
   padding: 0.2em 0.5em;
-  font-size: 1.8em;
+  font-size: 1.5em;
 }
 .our-projects > article h3:before {
   content: '';
@@ -46,6 +46,14 @@ h3 {
   border-right-color: #eb581a;
   border-top: 0;
 }
+.our-projects > article .picture {
+  transition: all 0.2s;
+  max-height: 80px;
+  overflow: hidden;
+}
+.our-projects > article .picture img {
+  width: 100%;
+}
 .our-projects > article .content {
   clear: both;
   max-height: 12em;
@@ -55,7 +63,6 @@ h3 {
   transition: all 0.2s;
 }
 .our-projects > article .content:after {
-/*content: '';*/
   display: block;
   position: absolute;
   right: 0;
@@ -70,6 +77,7 @@ h3 {
   background: #fff;
   border: 1px solid #eb581a;
   color: #eb581a;
+  font-size: 0.9em;
   padding: 0.3em 0.5em;
   margin-bottom: 10px;
   border-radius: 3px;
@@ -78,6 +86,10 @@ h3 {
   background: #eb581a;
   color: #fff;
   text-decoration: none;
+}
+.download-link:active,
+.download-link:focus {
+  box-shadow: inset 0 5px 20px rgba(0,0,0,0.1), inset 0 1px 0 rgba(0,0,0,0.1);
 }
 .technologies {
   clear: both;
@@ -101,12 +113,4 @@ h3 {
 }
 .technologies li.css {
   background-color: #1f085e;
-}
-.picture {
-  transition: all 0.2s;
-  max-height: 200px;
-  overflow: hidden;
-}
-.picture img {
-  width: 100%;
 }
