--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -1,131 +1,113 @@
-@charset 'utf-8';
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: #f2f2f2;
-  background: radial-gradient(#F2F2F2,#EEE);
-  font-family:'consolas' , 'deja vu sans mono',"lucida grande", "verdana", "arial", sans-serif;
-}
-
-.main {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-h1, h3 {
-  color: #EB581A;   
-  font-weight: normal
-}
-
-.our-projects {
-}
-
-.our-projects > article {
-  display: inline-block;
-  position: relative;
-  vertical-align: top;
-  width: 30%;
-  margin-right: 2%;
-  margin-bottom: 2%;
-  padding: 1em;
-  background: #fff;
-  text-align: left;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 2px;
-}
-
-.our-projects > article  h3 { 
-  position: absolute;
-  margin: 0;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 0.2em 0.5em;
-  font-size: 1.8em;
-}
-
-.our-projects > article  h3:before {
-  content: '';
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-  border: 0.3em solid rgba(0, 0, 0, 0);
-  border-right-color: #EB581A;
-  border-top: 0;
-}
-
-.our-projects > article  .content {
-  clear: both;  
-  max-height: 12em;
-  overflow: hidden;
-  position: relative;
-  margin-bottom: 0;
-  transition: all 0.2s;
-}
-.our-projects > article  .content:after { 
-  /*content: '';*/
-  display: block;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 2em;
-  background: linear-gradient(transparent, #fff);
-  -webkit-transition: all 0.2s;
-}
-
-.download-link {
-  display: inline-block;
-  background: #fff;
-  border: 1px solid #EB581A;
-  color: #EB581A;
-  padding: 0.3em 0.5em;
-  margin-bottom: 10px;
-  border-radius: 3px;
-}
-.download-link:hover {
-  background: #EB581A;
-  color: #fff;
-  text-decoration: none;
-}
-.download-link:active, .download-link:focus {
-
-}
-
-.technologies {
-  clear: both;
-  height: 10px;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 10px;
-  text-align: right;
-  overflow: hidden;
-  background: #555;
-}
+@charset 'utf-8'
 
 javascript = #F15501
 css = #1F085E
 
-.technologies li
-  display: inline-block;
-  vertical-align: top;
-  height: 100%;
-  font-size: 0.8;
-  margin: 0;
+* 
+  box-sizing border-box
 
-  &.javascript
-    background-color javascript
 
-  &.css
-    background-color css
+body 
+  background #f2f2f2
+  background radial-gradient(#F2F2F2,#EEE)
+  font-family 'consolas' , 'deja vu sans mono',"lucida grande", "verdana", "arial", sans-serif
 
-.picture {
-  transition: all 0.2s;
-  max-height: 200px;
-  overflow: hidden;
-}
-.picture img {
-  width: 100%;
-}
+
+.main 
+  max-width 1200px
+  margin 0 auto
+
+
+h1, h3 
+  color #EB581A   
+  font-weight normal
+
+.our-projects > article 
+  display inline-block
+  position relative
+  vertical-align top
+  width 30%
+  margin-right 2%
+  margin-bottom 2%
+  padding 1em
+  background #fff
+  text-align left
+  box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
+  border-radius 2px
+  h3  
+    position absolute
+    margin 0
+    background rgba(255, 255, 255, 0.8)
+    padding 0.2em 0.5em
+    font-size 1.5em
+    &:before 
+      content ''
+      display block
+      position absolute
+      right 0
+      top 0
+      border 0.3em solid rgba(0, 0, 0, 0)
+      border-right-color #EB581A
+      border-top 0  
+
+  .picture 
+    transition all 0.2s
+    max-height 80px
+    overflow hidden
+    img 
+      width 100%
+
+  .content 
+    clear both  
+    max-height 12em
+    overflow hidden
+    position relative
+    margin-bottom 0
+    transition all 0.2s
+    &:after
+      display block
+      position absolute
+      right 0
+      bottom 0
+      left 0
+      height 2em
+      background linear-gradient(transparent, #fff)
+      -webkit-transition all 0.2s
+
+.download-link 
+  display inline-block
+  background #fff
+  border 1px solid #EB581A
+  color #EB581A
+  font-size 0.9em
+  padding 0.3em 0.5em
+  margin-bottom 10px
+  border-radius 3px
+  &:hover 
+    background #EB581A
+    color #fff
+    text-decoration none
+  &:active, &:focus 
+    box-shadow inset 0 5px 20px rgba(0,0,0,0.1),  inset 0 1px 0 rgba(0,0,0,0.1)
+
+
+
+.technologies 
+  clear both
+  height 10px
+  padding 0
+  margin 0
+  margin-bottom 10px
+  text-align right
+  overflow hidden
+  background #555
+  li
+    display inline-block
+    vertical-align top
+    height 100%
+    font-size 0.8
+    margin 0
+    &.javascript
+      background-color javascript
+    &.css
+      background-color css
