--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -79,10 +79,12 @@ h1, h3
   background #fff
   border 1px solid #EB581A
   color #EB581A
-  font-size 0.9em
+  text-decoration none
+  font-size 0.8em
   padding 0.3em 0.5em
   margin-bottom 10px
   border-radius 3px
+  transition all 0.1s
   &:hover 
     background #EB581A
     color #fff
@@ -105,7 +107,6 @@ h1, h3
     display inline-block
     vertical-align top
     height 100%
-    font-size 0.8
     margin 0
     &.javascript
       background-color javascript
