--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -77,15 +77,12 @@ h3 {
   background: #fff;
   border: 1px solid #eb581a;
   color: #eb581a;
-<<<<<<< HEAD
   text-decoration: none;
   font-size: 0.8em;
-=======
-  font-size: 0.9em;
->>>>>>> d991d509bde885c6755c5a3070c1ad7aebc270a9
   padding: 0.3em 0.5em;
   margin-bottom: 10px;
   border-radius: 3px;
+  transition: all 0.1s;
 }
 .download-link:hover {
   background: #eb581a;
@@ -97,11 +94,15 @@ h3 {
   box-shadow: inset 0 5px 20px rgba(0,0,0,0.1), inset 0 1px 0 rgba(0,0,0,0.1);
 }
 .technologies {
+  position: relative;
   clear: both;
-  height: 10px;
+  height: 6px;
   padding: 0;
   margin: 0;
+  margin-top: 6px;
   margin-bottom: 10px;
+  border-radius: 3px;
+  overflow: hidden;
   text-align: right;
   overflow: hidden;
   background: #555;
@@ -110,10 +111,6 @@ h3 {
   display: inline-block;
   vertical-align: top;
   height: 100%;
-<<<<<<< HEAD
-=======
-  font-size: 0.8;
->>>>>>> d991d509bde885c6755c5a3070c1ad7aebc270a9
   margin: 0;
 }
 .technologies li.javascript {
@@ -121,4 +118,14 @@ h3 {
 }
 .technologies li.css {
   background-color: #1f085e;
+}
+.technologies:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  background: linear-gradient(rgba(255,255,255,0.4), transparent);
 }
