--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -133,22 +133,19 @@ h1, h3
     background linear-gradient(rgba(255,255,255,0.4), transparent)
 
 
-face-size = 80px
+face-size = 50px
 .faces-list 
   margin 0
   padding 0
 .faces-list > li
   @extend .third-block
-  background #fff
-  text-align left
-  box-shadow 0 -1px 1px rgba(0, 0, 0, 0.2)
-  border-radius 3px
   .picture
+    background #fff
     width face-size 
     height face-size
     display inline-block
     vertical-align middle
-    border-radius 3px
+    border-radius 50%
     overflow hidden
     margin-right 1em
     box-shadow 0 -1px 1px rgba(0, 0, 0, 0.2)
