--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -3,62 +3,85 @@
   box-sizing: border-box;
 }
 body {
+  margin: 0;
   background: #f2f2f2;
-  background: radial-gradient(#f2f2f2, #eee);
+  background: radial-gradient(#f2f2f2, #ddd);
+  font-size: 16px;
   font-family: 'consolas', 'deja vu sans mono', "lucida grande", "verdana", "arial", sans-serif;
 }
-.main {
+.main > section,
+.container,
+.main > header {
   max-width: 1200px;
   margin: 0 auto;
+  margin-bottom: 2em;
+  padding: 1em;
+}
+.main > section .container {
+  margin: 0 auto;
+  padding: 0;
+}
+.main > header {
+  margin-bottom: 0;
+}
+.main > header h1 {
+  margin-bottom: 0;
 }
 h1,
 h3 {
-  color: #eb581a;
+  color: #f15501;
   font-weight: normal;
 }
+h1 a,
+h3 a {
+  text-decoration: none;
+  color: #f15501;
+}
 .third-block,
-.our-projects > article,
-.faces-list > li {
+.projects article,
+.faces-list > li,
+.project-list article {
   display: inline-block;
   position: relative;
   vertical-align: top;
   width: 30%;
+  min-width: 320px;
   margin-right: 2%;
   margin-bottom: 2%;
   padding: 1em;
 }
-.our-projects > article {
+.projects article {
   background: #fff;
   text-align: left;
   box-shadow: 0 1px 1px rgba(0,0,0,0.2);
   border-radius: 2px;
 }
-.our-projects > article h3 {
+.projects article h3 {
   position: absolute;
   margin: 0;
   background: rgba(255,255,255,0.8);
   padding: 0.2em 0.5em;
   font-size: 1.5em;
 }
-.our-projects > article h3:before {
+.projects article h3:before {
   content: '';
   display: block;
   position: absolute;
   right: 0;
   top: 0;
   border: 0.3em solid rgba(0,0,0,0);
-  border-right-color: #eb581a;
+  border-right-color: #f15501;
   border-top: 0;
 }
-.our-projects > article .picture {
+.projects article .picture {
   transition: all 0.2s;
-  max-height: 80px;
+  max-height: 40px;
   overflow: hidden;
 }
-.our-projects > article .picture img {
+.projects article .picture img {
   width: 100%;
 }
-.our-projects > article .content {
+.projects article .content {
   clear: both;
   max-height: 12em;
   overflow: hidden;
@@ -66,7 +89,7 @@ h3 {
   margin-bottom: 0;
   transition: all 0.2s;
 }
-.our-projects > article .content:after {
+.projects article .content:after {
   display: block;
   position: absolute;
   right: 0;
@@ -79,8 +102,8 @@ h3 {
 .download-link {
   display: inline-block;
   background: #fff;
-  border: 1px solid #eb581a;
-  color: #eb581a;
+  border: 1px solid #f15501;
+  color: #f15501;
   text-decoration: none;
   font-size: 0.8em;
   padding: 0.3em 0.5em;
@@ -89,7 +112,7 @@ h3 {
   transition: all 0.1s;
 }
 .download-link:hover {
-  background: #eb581a;
+  background: #f15501;
   color: #fff;
   text-decoration: none;
 }
@@ -134,27 +157,45 @@ h3 {
   display: block;
   background: linear-gradient(rgba(255,255,255,0.4), transparent);
 }
+section.faces {
+  background: #f15501;
+  max-width: 100%;
+  margin: 0;
+  color: #fff;
+}
+section.faces a {
+  color: #fff;
+}
 .faces-list {
   margin: 0;
   padding: 0;
 }
 .faces-list > li .picture {
   background: #fff;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   display: inline-block;
   vertical-align: middle;
   border-radius: 50%;
   overflow: hidden;
   margin-right: 1em;
-  box-shadow: 0 -1px 1px rgba(0,0,0,0.2);
 }
 .faces-list > li .picture img {
-  max-width: 50px;
+  max-width: 60px;
 }
 .faces-list > li .name {
   display: inline-block;
   font-size: 1.2em;
-  color: #eb581a;
   text-decoration: none;
+}
+.project-list article {
+  background: #fff;
+  text-align: left;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+  border-radius: 2px;
+}
+@media screen and (min-width: 1024px) {
+  .third-block {
+    max-width: 45%;
+  }
 }
