--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -46,7 +46,7 @@ h1, h3
   margin-bottom 2%
   padding 1em
 
-.projects article 
+.repositories article 
   background #fff
   text-align left
   box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
