--- a/assets/stylesheets/style.styl
+++ b/assets/stylesheets/style.styl
@@ -2,22 +2,25 @@
 
 javascript = #F15501
 css = #1F085E
-
 orange = javascript
 
 * 
+  -moz-box-sizing border-box
+  -webkit-box-sizing border-box
   box-sizing border-box
 
 
 body 
   margin 0
   background #f2f2f2
-  background radial-gradient(#F2F2F2,#ddd)
+  background radial-gradient(#F2F2F2,#eee)
   font-size 16px
   font-family 'consolas' , 'deja vu sans mono',"lucida grande", "verdana", "arial", sans-serif
 
 
-.main > section, .container, .main > header
+.main > section, 
+.container, 
+.main > header
   max-width 1200px
   margin 0 auto
   margin-bottom 2em
@@ -27,6 +30,7 @@ body
   padding 0
 .main > header 
   margin-bottom 0
+  padding 0 1em
   h1
       margin-bottom 0
 h1, h3 
@@ -35,7 +39,10 @@ h1, h3
   a
     text-decoration none
     color orange 
+h3 
+  margin-top 0
 
+    
 .third-block
   display inline-block
   position relative
@@ -45,6 +52,7 @@ h1, h3
   margin-right 2%
   margin-bottom 2%
   padding 1em
+  padding-bottom 0.5em
 
 .repositories article 
   background #fff
@@ -145,6 +153,28 @@ h1, h3
     display block
     background linear-gradient(rgba(255,255,255,0.4), transparent)
 
+progress
+  -moz-appearance none
+  -webkit-appearance none
+  appearance none
+  width 100%
+  height 6px
+  padding 0
+  margin 0
+  margin-top 6px
+  margin-bottom 10px
+  border 0
+  border-radius 3px
+  overflow hidden
+  text-align right
+  overflow hidden
+  background #ccc
+  &::-webkit-progress-bar
+    background-color orange
+  &::-moz-progress-bar
+    background-color orange
+  &::progress-bar
+    background-color orange
 section.faces
   background orange
   max-width 100%
@@ -181,6 +211,10 @@ face-size = 60px
   box-shadow 0 1px 1px rgba(0, 0, 0, 0.2)
   border-radius 2px
   @extend .third-block
+
+.preview
+  min-height 75px
+  background #f2f2f2
 
 @media screen and (min-width: 1024px)
   .third-block
