--- a/assets/layout/index.jade
+++ b/assets/layout/index.jade
@@ -10,10 +10,15 @@ html(lang='en')
       header
         h1
           a(href='https://github.com/#{org}', target="_blank")= org
-      section.repositories
+        nav
+          ul
+            li: a(href="#repositories") Repositories
+            li: a(href="#faces") Faces
+            li: a(href="#projects") Projects
+      section#repositories.repositories
         h2 Repositories
         - each repo in repos
-          article
+          article.fourth-block
             .preview
               h3= repo.name
               .picture
@@ -24,21 +29,21 @@ html(lang='en')
             a.download-link(href='#{repo.html_url}', target="_blank") Repository
             div.content= repo.description
 
-      section.faces
+      section#faces.faces
         .container
           h2 Members
           ul.faces-list
             - each member in members
-              li
+              li.third-block
                 .picture
                   img(src='#{member.avatar_url}')
                 a.name(href="#{member.html_url}", target="_blank")= member.login
 
-      section.projects
+      section#projects.projects
         h2 Projects
         .project-list
           - each project in projects
-            article
+            article.fourth-block
               h3=  project.name
               ul.tools
                 - if (project.hasOwnProperty('tools') && project.tools)
